levels: fix levels table on firefox

--- a/frontend/src/components/LevelsTable.css
+++ b/frontend/src/components/LevelsTable.css
@@ -1,93 +1,49 @@
-.LevelsTable thead {
-  display: none;
-}
-
 .DataTable .LevelsTable--image {
   text-align: center;
 }
 
-.LevelsTable .DataTable--cell {
-}
-
-.LevelsTable.DataTable {
-  display: grid;
-  grid-template-columns: min-content 1fr;
-  gap: 1rem 0;
-}
-
-.LevelsTable .DataTable--body {
-  display: contents;
-}
-.LevelsTable .DataTable--row {
-  display: contents;
-}
-.LevelsTable .DataTable--cell[colspan] {
+.LevelView {
   padding: 0.5rem;
-  grid-column: 1 / span 2;
-}
-.LevelsTable .DataTable--cell[colspan] > p {
-  margin: 0;
-}
-.LevelsTable .DataTable--cell {
-  box-sizing: border-box;
   background: var(--levels-table-bg-color);
-  padding: 0;
-}
-.LevelsTable--image {
-  aspect-ratio: calc(4 / 3);
+  display: flex;
+  align-items: stretch;
+  gap: 0.75rem;
+  height: 100%;
+  margin-bottom: 1rem;
 }
 
-.DataTable .LevelsTable--image {
-  padding: 0.5rem !important;
-  padding-right: 1rem !important;
-}
-.DataTable .LevelsTable--details {
-  padding: 0.5rem !important;
-  padding-left: 0 !important;
-}
-.LevelsTable--image,
-.LevelsTable--details {
-  vertical-align: top;
-}
-.LevelsTable--details small {
-  line-height: 1.2rem;
-  display: inline-block;
-}
-.LevelsTable--details {
-  width: 100%;
-}
-.LevelsTable--previewLink {
+.LevelView--coverLink {
+  width: 15.5rem;
+  overflow: hidden;
   display: block;
-  width: 100%;
-  height: 100%;
+  max-height: 100%;
+  position: relative;
 }
-.LevelsTable--previewLink:hover {
+.LevelView--coverLink:hover {
   opacity: 0.9;
 }
-.LevelsTable--previewImage {
+
+.LevelView--coverImage {
+  position: absolute;
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.LevelsTable--statusApproved {
+
+.LevelView--details {
+  width: 100%;
+}
+.LevelView--details small {
+  line-height: 1.2rem;
+  display: inline-block;
+}
+
+.LevelView--statusApproved {
   color: var(--success-fg-color);
 }
-.LevelsTable--statusPending {
+.LevelView--statusPending {
   color: var(--warning-fg-color);
 }
-.LevelsTable--statusRejected {
+.LevelView--statusRejected {
   color: var(--failure-fg-color);
-}
-.LevelsTable--authorList {
-  display: inline;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-.LevelsTable--authorListItem {
-  display: inline;
-}
-.LevelsTable--authorListItem:not(:last-child):after {
-  content: ", ";
-  padding: 0;
 }
